<resources>
    <string name="app_name">RecipEasy</string>
    <string name="author_label">Author:</string>
    <string name="calories_label">Calories:</string>
    <string name="recipe_name_default">Recipe</string>
    <string name="servings_label">Servings:</string>
    <string name="ingredientsLabel">INGREDIENTS</string>
    <string name="directionsLabel">DIRECTIONS</string>
    <string name="prep_time_label">Prep/Cook Time:</string>
    <string name="add_a_new_recipe_string">Add a New Recipe</string>
    <string name="dish_string">Dish</string>
    <string name="cuisine_string">Cuisine</string>
    <string name="calories_string">Calories</string>
    <string name="prep_time_string">Prep Time</string>
    <string name="time_string">Time\n(minutes)</string>
    <string name="cook_time_string">Cook Time</string>
    <string name="servings_string">Servings</string>
    <string name="dietary_restrictions">Dietary Restrictions</string>
    <string name="vegetarian_string">Vegetarian</string>
    <string name="gluten_free_string">Gluten Free</string>
    <string name="vegan_string">Vegan</string>
    <string name="enter_steps_to_your_recipe">Enter Recipe Steps:</string>
    <string name="add_new_step">Add New Step</string>
    <string name="submit">Submit</string>
    <string name="ingredients_string">Ingredients:</string>
    <string name="add_new_ingredient">Add Ingredient</string>
    <string name="camera_section_label">Upload a Photo of your Dish:</string>
    <string name="picture_of_dish">Picture of Dish</string>
    <string name="username">Username</string>
    <string name="log_in">Log In</string>
    <string name="recent">Recent</string>
    <string name="following">Following</string>
    <string name="message">Message</string>
    <string name="follow">Follow</string>
    <string name="unfollow">Unfollow</string>
    <string name="followers">Followers</string>
    <string name="discover">Discover</string>
    <string name="recipes">Recipes</string>
    <string name="users">Users</string>
    <string name="api">API</string>
    <string name="username_label">Username</string>
    <string name="view_profile">View Profile</string>
    <string name="see_more">See More</string>
    <string name="inbox">Inbox</string>
    <string name="log_out">Log Out</string>
    <string name="enter_message">Enter Message</string>

</resources>