<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".activities.FullRecipeActivity">

    <TextView
        android:id="@+id/recipeNameId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/recipe_name_default"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toTopOf="@+id/authorLabelId"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="Recipe Name" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        app:layout_constraintBottom_toTopOf="@id/contentScroll"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearIconLayout"
        app:layout_constraintVertical_bias="1.0">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/ingredientsTabId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ingredientsLabel" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/directionsTabId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/directionsLabel" />
    </com.google.android.material.tabs.TabLayout>

    <ScrollView
        android:id="@+id/contentScroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/longContentTextId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:paddingTop="8dp"
                android:paddingEnd="16dp"
                android:paddingBottom="8dp"
                tools:text="Ingredient 1\nIngredient 2\nIngredient 3" />
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/cuisineLabelId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="4dp"
        app:layout_constraintStart_toStartOf="@id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        android:text="Cuisine"
        app:layout_constraintBottom_toTopOf="@+id/caloriesLabelId"
        app:layout_constraintTop_toBottomOf="@+id/authorLabelId"
        tools:layout_editor_absoluteX="33dp" />

    <TextView
        android:id="@+id/caloriesLabelId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="4dp"
        app:layout_constraintStart_toStartOf="@id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        android:text="@string/calories_label"
        app:layout_constraintBottom_toTopOf="@+id/prepTimeLabelId"
        app:layout_constraintTop_toBottomOf="@+id/cuisineLabelId"
        tools:layout_editor_absoluteX="33dp" />

    <TextView
        android:id="@+id/prepTimeLabelId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="4dp"
        app:layout_constraintStart_toStartOf="@id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        android:text="@string/prep_time_label"
        app:layout_constraintBottom_toTopOf="@+id/servingsLabelId"
        app:layout_constraintTop_toBottomOf="@+id/caloriesLabelId"
        tools:layout_editor_absoluteX="33dp" />

    <TextView
        android:id="@+id/authorLabelId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="4dp"
        app:layout_constraintStart_toStartOf="@id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        android:text="@string/author_label"
        app:layout_constraintBottom_toTopOf="@+id/cuisineLabelId"
        app:layout_constraintTop_toBottomOf="@+id/recipeNameId"
        tools:layout_editor_absoluteX="34dp" />

    <TextView
        android:id="@+id/servingsLabelId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="4dp"
        android:text="@string/servings_label"
        app:layout_constraintStart_toStartOf="@id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintBottom_toTopOf="@+id/linearIconLayout"
        app:layout_constraintTop_toBottomOf="@+id/prepTimeLabelId"
        tools:layout_editor_absoluteX="33dp" />

    <LinearLayout
        android:id="@+id/linearIconLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintBottom_toTopOf="@+id/tabView"
        app:layout_constraintTop_toBottomOf="@+id/servingsLabelId"
        tools:layout_editor_absoluteX="35dp">

        <ImageView
            android:id="@+id/vegIcon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/veg" />

        <ImageView
            android:id="@+id/veganIcon"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:src="@drawable/vegan" />

        <ImageView
            android:id="@+id/gfIcon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/gf" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:scaleType="fitStart"
        app:layout_constraintBottom_toTopOf="@+id/tabView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        tools:srcCompat="@drawable/sample_food" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".08" />
</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>