<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        >

        <TextView
            android:id="@+id/labelDishId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dish_string"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/cuisineLabelId"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.98"
            app:layout_constraintVertical_chainStyle="spread" />

        <EditText
            android:id="@+id/dishInputId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="dish name"
            android:ems="10"
            android:hint="@string/dish_string"
            android:inputType="text"
            android:minHeight="48dp"
            app:layout_constraintBottom_toTopOf="@+id/cuisineSpinnerId"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            app:layout_constraintVertical_chainStyle="spread"
            tools:ignore="TextContrastCheck" />

        <Spinner
            android:id="@+id/cuisineSpinnerId"
            android:layout_width="230dp"
            android:layout_height="48dp"
            android:entries="@array/cuisine_options"
            app:layout_constraintBottom_toTopOf="@+id/rangeSlider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/dishInputId" />

        <TextView
            android:id="@+id/cuisineLabelId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cuisine_string"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/calorieLabelId"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@+id/labelDishId" />

        <TextView
            android:id="@+id/calorieLabelId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calories_string"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/dietaryRestrictionsLabelId"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@+id/cuisineLabelId" />

        <com.google.android.material.slider.RangeSlider
            android:id="@+id/rangeSlider"
            android:layout_width="229dp"
            android:layout_height="46dp"
            android:layout_alignBaseline="@+id/calorieLabelId"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/cuisine_string"
            android:stepSize="50.0"
            android:valueFrom="0.0"
            android:valueTo="2000.0"
            app:layout_constraintBottom_toTopOf="@+id/dietaryRestrictionsLabelId"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/cuisineSpinnerId"
            app:values="@array/calorie_values" />

        <TextView
            android:id="@+id/dietaryRestrictionsLabelId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dietary_restrictions"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/veganBoxId"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@+id/guideline3"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintVertical_chainStyle="packed" />

        <CheckBox
            android:id="@+id/vegetarianBoxId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vegetarian_string"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@+id/glutenFreeBoxId" />

        <CheckBox
            android:id="@+id/glutenFreeBoxId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gluten_free_string"
            app:layout_constraintBottom_toTopOf="@+id/vegetarianBoxId"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@+id/peanutBoxId" />

        <CheckBox
            android:id="@+id/peanutBoxId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Peanut Allergy"
            app:layout_constraintBottom_toTopOf="@+id/glutenFreeBoxId"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@+id/veganBoxId" />

        <CheckBox
            android:id="@+id/veganBoxId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vegan_string"
            app:layout_constraintBottom_toTopOf="@+id/peanutBoxId"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@+id/dietaryRestrictionsLabelId" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="20dp"
            app:layout_constraintGuide_percent=".3" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="25dp"
            app:layout_constraintGuide_percent=".4" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>